# BaseCamp

./: README.md
firstTask/: .gitignore  Makefile
firstTask/src/: client.cpp  server.cpp
firstTask/src/network/: Connection.cpp  Connection.hpp
firstTask/src/platform/: TrackMouse.cpp  TrackMouse.hpp
secondTask/: CMakeLists.txt  mainwindow.ui
secondTask/Headers/: StringTools.h  mainwindow.h
secondTask/Source/: StringTools.cpp  main.cpp  mainwindow.cpp
thirdTask/: .gitignore  Makefile
thirdTask/src/: main.cpp
thirdTask/src/sniffer/: sniffer.cpp  sniffer.hpp
